--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ body{
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-            <a class="nav-link" href="">Contact</a>
+            <a class="nav-link" href="#footer">Contact</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Pricing</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""><i class='bx bxl-apple'></i>Download</a>
+            <a class="nav-link" href="#cta"><i class='bx bxl-apple'></i>Download</a>
         </li>
     </ul>
     </div>
@@ -77,7 +77,7 @@ body{
 
 
 
-    <div class="row">
+    <div class="row sex">
 
     <div class="col-lg-6">
       <h1>Meet new and interesting dogs nearby.</h1>
@@ -85,7 +85,7 @@ body{
       <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 position-relative">
       <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
     </div>
 
@@ -133,7 +133,7 @@ body{
         <div class="carousel-item active">
           <h2 class="sex2" >"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
     <img class="testimg" src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <em>Pandu, Chikmagalore</em>
         </div>
         <div class="carousel-item">
           <h2 class="sex2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -170,34 +170,57 @@ body{
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2><b></b>A Plan for Every Dog's Needs</b></h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+<div class="card-group">
+  <div class="col-lg-3 col-md-6">
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <div class="card">
+      <div class="card-header">
+        <h3>Pitbull</h3>
+          </div>
+    <div class="card-body">
+      <h2>Free</h2>
+        <p>5 Matches Per Day</p>
+        <p>10 Messages Per Day</p>
+        <p>Unlimited App Usage</p>
+      <a href="#" class="btn btn-outline-dark ">Current Plan</a>
+    </div>
+  </div>
+</div>
 
 
-    <h3>Labrador</h3>
+<div class="col-lg-3 col-md-6">
+  <div class="card">
+    <div class="card-header">
+      <h3>Labrador</h3>
+        </div>
+  <div class="card-body">
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <a href="#" class="btn btn-dark">Upgrade</a>
+  </div>
+</div>
+</div>
 
-
+<div class="col-lg-3 col-md-12">
+<div class="card">
+  <div class="card-header">
     <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+      </div>
+<div class="card-body">
+  <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+  <a href="#" class="btn btn-dark">Upgrade</a>
+</div>
+</div>
+</div>
+</div>
   </section>
 
 
@@ -205,8 +228,10 @@ body{
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button"><i class='bx bxl-apple'></i>Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button"  class="btn btn-dark btn d-button "><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn"><i class="fa-brands fa-google-play"></i> Download</button>
+  </div>
 
   </section>
 
@@ -215,7 +240,12 @@ body{
 
   <footer id="footer">
 
-    <p>© Copyright TinDog</p>
+    <i class=" sm fa-brands fa-facebook"></i>
+    <i class=" sm fa-brands fa-twitter"></i>
+    <i class=" sm fa-brands fa-instagram"></i>
+    <i class=" sm fa-sharp fa-solid fa-envelope"></i>
+
+    <p>Made with by <i class="fa-solid fa-heart"></i><a href="https://github.com/arjunshetty1"> Arjun</a></p>
 
   </footer>
 
