--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ body{
     <i class=" sm fa-brands fa-instagram"></i>
     <i class=" sm fa-sharp fa-solid fa-envelope"></i>
 
-    <p>Made with by <i class="fa-solid fa-heart"></i><a href="https://github.com/arjunshetty1"> Arjun</a></p>
+    <p>Made with< class="fa-solid fa-heart"/i>by<a href="https://github.com/arjunshetty1"> Arjun</a></p>
 
   </footer>
 
